--- a/templates/home/Covid_Updates.html
+++ b/templates/home/Covid_Updates.html
@@ -52,7 +52,7 @@
 
        }
 
-    
+
 
        #gridd {
               display: grid;
@@ -61,23 +61,26 @@
 
 
        }
+
        @media only screen and (max-width: 886px) {
-    .total-monal{
+              .total-monal {
 
-        top: 50vh;
-    }
+                     top: 50vh;
+              }
 
-}
+       }
 
-       #gr{
+       #gr {
               height: 98vh;
        }
+
        #gridd>div {
               /* background-color:rgb(12, 12, 86) ; */
-              background:radial-gradient(#a1c4fd ,#c2e9fb);
+              background: radial-gradient(#a1c4fd, #c2e9fb);
 
        }
-      #gl > .outer> select{
+
+       #gl>.outer>select {
               width: 25%;
               /* background-color: rgb(235, 236, 255); */
               margin: 5px;
@@ -85,181 +88,226 @@
               display: inline-block;
               position: relative;
        }
-       #gl > button{
+
+       #gl>button {
               /* position: relative;
               left: -3vw; */
               margin: auto;
               margin: 5px 9px;
        }
-       .change1{
+
+       .change1 {
               float: left;
+
+       }
+
+       .change2 {
+              float: left;
+       }
+
+       .change3 {
+              float: left;
+
+       }
+
+       .outer {}
+
+       #ff {
+              width: 50vw;
+              margin: auto;
+       }
+
+
+       .vacc {
+              display: flex;
+              width: 95vw;
+              margin: auto;
+              flex-wrap: wrap;
+              justify-content: center;
+              flex-direction: row;
+              /* display: inline-block; */
+              margin-bottom: 9vh;
+       }
+
+       .box {
+              height: 20vh;
+              max-width: 14vw;
+              min-width: 200px;
+              margin-left: 5px;
+              margin-bottom: 10px;
+              /* box-shadow: chartreuse 5px 5px 5px; */
+              color: rgb(2, 16, 84);
+              display: flex;
+              /* text-decoration: w; */
+              flex-direction: column;
+              align-items: center;
+              justify-content: center;
+              font-size: 150%;
+              transition: all 0.5s;
+
+       }
+
+       .box:hover {
+              box-shadow: rgb(0, 0, 0) 4px 7px 7px;
+              transform: scale(1.05, 1.05);
+              z-index: 34092;
+              box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25),
+                     -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
+
+       }
+
+       #dc {
+              background: radial-gradient(#1fe4f5, #3fbafe);
+       }
+
+       #dd {
+              background: radial-gradient(#1fe4f5, #3fbafe);
+       }
+
+       #dr {
+              background: radial-gradient(#1fe4f5, #3fbafe);
+       }
+
+       #td {
+              background: radial-gradient(#1fe4f5, #3fbafe);
+       }
+
+       #tr {
+              background: radial-gradient(#1fe4f5, #3fbafe);
+       }
+
+       #tc {
+              background: radial-gradient(#1fe4f5, #3fbafe);
+
+       }
+
+       #v {
+              /* background-color: #00e400; */
+              background: radial-gradient(#1fe4f5, #3fbafe);
+       }
+
+       .box b {
+              font-family: 'Times New Roman', Times, serif;
+
+       }
+
+       .hdd {
+              width: 100%;
+              height: 40px;
+              text-align: center;
+              background-color: rgb(18, 0, 91);
+              color: white;
+              font-size: 1.4em;
+              font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+       }
+
+
+
+
+       /* mediaaaaaaaaaaaaaaaaaaaaaaaa */
+
+       @media only screen and (max-width: 886px) {
+
+              #gridd {
+                     display: grid;
+                     grid-template-columns: 1fr;
+              }
+
+
+              #gl {
+                     position: relative;
+                     top: 46vh;
+              }
+
+
+
+              #gr {
+                     position: absolute;
+                     height: 10vh;
+                     width: 100%;
+              }
+
+              #map {
+                     height: 46vh;
+                     width: 100vw;
+
+
+              }
+
+              .flagimg {
+                     display: none;
+
+              }
+
+              #gl>.outer>select {
+                     width: 31%;
+                     /* background-color: rgb(235, 236, 255); */
+                     margin: 2px;
+                     color: rgb(0, 0, 52);
+                     display: inline-block;
+                     position: relative;
+              }
+
+              #gl>button {
+
+                     margin: auto;
+                     margin: 2px 3px;
+                     padding: 5px 4px;
+              }
+
+              .vacc {
+                     display: flex;
+                     position: relative;
+                     top: 50vh;
+                     width: 95vw;
+                     margin: auto;
+                     flex-wrap: wrap;
+                     justify-content: center;
+                     flex-direction: row;
+                     /* display: inline-block; */
+                     margin-bottom: 9vh;
+              }
+
+
+
+              #ff {
+                     width: 95vw;
+                     margin: auto;
+              }
+
+
+
+
+       }
+
+       .box h3 {
+              color: rgb(255, 255, 255);
+              font-weight: bold;
+       }
+
+
+
+       .searchblood-container {
+              margin: 12px auto;
+              width: 274px;
+              display: flex;
               
        }
-       .change2{
-              float: left;
-       }
-       .change3{
-float: left;
 
-       }
-       .outer{
-
-       }
-       #ff{
-width: 50vw;
-margin: auto;    
-   }
-
-
-.vacc{
-       display: flex;
-       width: 95vw;
-       margin: auto;
-       flex-wrap: wrap;
-       justify-content: center;
-         flex-direction: row;
-       /* display: inline-block; */
-       margin-bottom: 9vh;
-}
- .box{
-       height: 20vh;
-       max-width: 14vw;
-       min-width: 200px;
-       margin-left: 5px;
-       margin-bottom: 10px;
-       /* box-shadow: chartreuse 5px 5px 5px; */
-       color: rgb(2, 16, 84);
-       display: flex;
-       /* text-decoration: w; */
-       flex-direction: column;
-align-items: center;     
-  justify-content: center;
-  font-size: 150%;
-  transition: all 0.5s;
-
-}
-.box:hover{
-  box-shadow: rgb(0, 0, 0) 4px 7px 7px;
- transform: scale(1.05, 1.05);
- z-index: 34092;
- box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
-    -5px -5px 30px 15px rgba(0,0,0,0.22);
- {% comment %} transform:skewY(5deg); {% endcomment %}
-}
-#dc{
-      background: radial-gradient(#1fe4f5, #3fbafe);
-}
-#dd{
-      background: radial-gradient(#1fe4f5, #3fbafe);
-}
-#dr{
-      background: radial-gradient(#1fe4f5, #3fbafe);
-}
-#td{
-      background: radial-gradient(#1fe4f5, #3fbafe);
-}
-#tr{
-      background: radial-gradient(#1fe4f5, #3fbafe);
-}
-#tc{
-      background: radial-gradient(#1fe4f5, #3fbafe);
-       
-}
-#v{
-       /* background-color: #00e400; */
-      background: radial-gradient(#1fe4f5, #3fbafe);
-}
-.box b{
-       font-family: 'Times New Roman', Times, serif;
-
-}
-.hdd{
-       width: 100%;
-       height: 40px;
-       text-align: center;
-       background-color: rgb(18, 0, 91);
-       color: white;
-       font-size: 1.4em;
-       font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
-}
-
-
-
-
-/* mediaaaaaaaaaaaaaaaaaaaaaaaa */
-
-@media only screen and (max-width: 886px) {
-      
-       #gridd {
-              display: grid;
-              grid-template-columns: 1fr;
+       .selectblood {
+              text-align: center;
        }
 
-
-       #gl{
-              position: relative;
-              top: 46vh;
-       }
-
-
-
-       #gr{
-              position: absolute;
-              height: 10vh;
-              width: 100%;
-       }
-       #map {
-              height: 46vh;
-              width: 100vw;
-
+       .donorsearchicon {
+              margin: 4px;
 
        }
-       .flagimg {
-             display: none;
 
+       .donorsearchicon button {
+              background-color: rgb(197, 49, 49);
+              color: white;
+              padding: 0 7px;
        }
-       #gl > .outer> select{
-              width: 31%;
-              /* background-color: rgb(235, 236, 255); */
-              margin: 2px;
-              color: rgb(0, 0, 52);
-              display: inline-block;
-              position: relative;
-       }
-
-       #gl > button{
-            
-              margin: auto;
-              margin: 2px 3px;
-              padding: 5px 4px;
-       }
-       .vacc{
-       display: flex;
-       position: relative;
-       top: 50vh;
-       width: 95vw;
-       margin: auto;
-       flex-wrap: wrap;
-       justify-content: center;
-         flex-direction: row;
-       /* display: inline-block; */
-       margin-bottom: 9vh;
-}
-
-
-
-       #ff{
-width: 95vw;
-margin: auto;       }
-
-
-
-
-    }
-    .box h3{
-           color: rgb(255, 255, 255);
-           font-weight: bold;
-    }
 </style>
 
 {% endblock css %}
@@ -281,42 +329,51 @@ margin: auto;       }
               <div id="flag">
               </div>
               <div class="outer">
-              <select class="form-select change1  wdth mt-2" onchange="myFunction2()" id="country"
-                     onmousedown="if(this.options.length>5){this.size=5;}" onchange="this.blur()" onblur="this.size=0;"
-                     aria-label="Default select example">
-                     <option selected>Country</option>
-       
-              </select>
-              <select disabled class="form-select change2 wdth mt-2"
-                     onchange="myFunction()" onmousedown="if(this.options.length>5){this.size=5;}" onchange="this.blur()"
-                     onblur="this.size=0;" id="state" aria-label="Default select example">
-                     <option selected>State</option>
-       
-              </select>
-              <select disabled class="form-select change3 wdth  mt-2" onchange="myFunction1()" id="dist"
-                     aria-label="Default select example" onmousedown="if(this.options.length>5){this.size=5;}"
-                     onchange="this.blur()" onblur="this.size=0;" id="state" aria-label="Default select example">
-                     <option>District</option>
-       
-              </select>
+                     
+   
+            <select class="form-select selectblood" onchange="myFunction2()" id="country"
+            onchange="this.blur()"
+            onblur="this.size=0;" aria-label="Default select example">
+            <option selected>Country</option>
+       </select>
+            <select disabled class="form-select selectblood" onchange="myFunction()"
+            onchange="this.blur()"
+            onblur="this.size=0;" id="state" aria-label="Default select example">
+            <option selected>State</option>
+       </select>
+            <select disabled class="form-select selectblood"  onchange="myFunction1()" id="dist"
+            aria-label="Default select example" 
+            onchange="this.blur()" onblur="this.size=0;" id="state" aria-label="Default select example">
+            <option>District</option>
+       </select>
+            
+             
+   
+                  
+   
+          
+           
+   
+   
 
-       </div>
-       <button id="DataShown" type="button"  class="custom-btn btn-3"><span>Search</span></button>
+                    
 
-       
+              </div>
+              <button id="DataShown" type="button" class="custom-btn btn-3"><span>Search</span></button>
+
 
               <div id="ff">
                      <div id="CS">
 
-                            
+
                             <canvas id="myChartCS" style="width:100%;max-width:600px"></canvas>
                      </div>
                      <div id="SD">
 
-                            
+
                             <canvas id="myChartSD" style="width:100%;max-width:600px"></canvas>
                      </div>
-                     
+
               </div>
 
 
@@ -331,43 +388,43 @@ margin: auto;       }
 </div>
 <img src="" alt="" class="flg">
 <div class="vacc">
-<div class="hdd" style="font-family: 'Times New Roman', Times, serif; font-weight: bold;">INDIA</div>
+       <div class="hdd" style="font-family: 'Times New Roman', Times, serif; font-weight: bold;">INDIA</div>
 
-<div id="dc" class="box">
-       <b>  Daily Confirmed</b>
-       <h3 id="dcc"></h3>
+       <div id="dc" class="box">
+              <b> Daily Confirmed</b>
+              <h3 id="dcc"></h3>
 
-</div>
-<div id="dd" class="box">
-       <b>Daily Deaths</b>
-       <h3 id="ddd"></h3>
+       </div>
+       <div id="dd" class="box">
+              <b>Daily Deaths</b>
+              <h3 id="ddd"></h3>
 
-</div>
-<div id="dr" class="box">
-       <b>Daily Recovered</b>
-       <h3 id="drr"></h3>
+       </div>
+       <div id="dr" class="box">
+              <b>Daily Recovered</b>
+              <h3 id="drr"></h3>
 
-</div>
-<div id="v" class="box">
-       <b>Fully Vaccinated</b>
-       <h3 id="vv"></h3>
+       </div>
+       <div id="v" class="box">
+              <b>Fully Vaccinated</b>
+              <h3 id="vv"></h3>
 
-</div>
-<div id="tc" class="box">
-       <b>Total Confirmed</b>
-       <h3 id="tcc"></h3>
+       </div>
+       <div id="tc" class="box">
+              <b>Total Confirmed</b>
+              <h3 id="tcc"></h3>
 
-</div>
-<div id="td" class="box">
-       <b>Total Deaths</b>
-       <h3 id="tdd"></h3>
+       </div>
+       <div id="td" class="box">
+              <b>Total Deaths</b>
+              <h3 id="tdd"></h3>
 
-</div>
-<div id="tr" class="box">
-       <b>Total Recovered</b>
-       <h3 id="trr"></h3>
+       </div>
+       <div id="tr" class="box">
+              <b>Total Recovered</b>
+              <h3 id="trr"></h3>
 
-</div>
+       </div>
 
 </div>
 <script>
@@ -375,52 +432,53 @@ margin: auto;       }
 </script>
 
 
-  {% comment %} <script>
-           var xValues = ["Active", "France", "Spain", "USA", "Argentina"];
-                                var yValues = [550, 49, 44, 24, 15];
-                                var barColors = ["red", "green","blue","orange","brown"];
-            
-                                new Chart("myChartCS", {
-                                type: "bar",
-                                data: {
-                                    labels: xValues,
-                                    datasets: [{
-                                    backgroundColor: barColors,
-                                    data: yValues
-                                    }]
-                                },
-                                options: {
-                                    indexAxis: 'y',
-                                    legend: {display: false},
-                                    title: {
-                                    display: true,
-                                    text: "World Wine Production 2018"
-                                    }
-                                }
-                                });
-           var xValues = ["Active", "France", "Spain", "USA", "Argentina"];
-                                var yValues = [550, 49, 44, 24, 15];
-                                var barColors = ["red", "green","blue","orange","brown"];
-            
-                                new Chart("myChartSD", {
-                                type: "bar",
-                                data: {
-                                    labels: xValues,
-                                    datasets: [{
-                                    backgroundColor: barColors,
-                                    data: yValues
-                                    }]
-                                },
-                                options: {
-                                    indexAxis: 'y',
-                                    legend: {display: false},
-                                    title: {
-                                    display: true,
-                                    text: "World Wine Production 2018"
-                                    }
-                                }
-                                });
-</script>  --> {% endcomment %}
+{% comment %}
+<script>
+       var xValues = ["Active", "France", "Spain", "USA", "Argentina"];
+       var yValues = [550, 49, 44, 24, 15];
+       var barColors = ["red", "green", "blue", "orange", "brown"];
+
+       new Chart("myChartCS", {
+              type: "bar",
+              data: {
+                     labels: xValues,
+                     datasets: [{
+                            backgroundColor: barColors,
+                            data: yValues
+                     }]
+              },
+              options: {
+                     indexAxis: 'y',
+                     legend: { display: false },
+                     title: {
+                            display: true,
+                            text: "World Wine Production 2018"
+                     }
+              }
+       });
+       var xValues = ["Active", "France", "Spain", "USA", "Argentina"];
+       var yValues = [550, 49, 44, 24, 15];
+       var barColors = ["red", "green", "blue", "orange", "brown"];
+
+       new Chart("myChartSD", {
+              type: "bar",
+              data: {
+                     labels: xValues,
+                     datasets: [{
+                            backgroundColor: barColors,
+                            data: yValues
+                     }]
+              },
+              options: {
+                     indexAxis: 'y',
+                     legend: { display: false },
+                     title: {
+                            display: true,
+                            text: "World Wine Production 2018"
+                     }
+              }
+       });
+</script> --> {% endcomment %}
 
 
 
@@ -428,8 +486,8 @@ margin: auto;       }
 
 
 
-     
-     
+
+
 
 
 
@@ -446,8 +504,8 @@ margin: auto;       }
 
 {% endblock %}
 
-  {% block js %}
+{% block js %}
 
 {% load static %}
 <script src="{% static 'static.js' %}"></script>
-{% endblock js %} 
+{% endblock js %}
