--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -298,6 +298,7 @@ label {
   
   <div class="hiddenCB">
   <h3 class="my-3"> Update Available Blood data</h3>
+  <small class="my-3"> (P) means For Plasma Treatment</small>
   <form action="/profile" method="POST">
     {% csrf_token %}
     
