--- a/templates/blog/blogHome.html
+++ b/templates/blog/blogHome.html
@@ -104,6 +104,12 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
+  @media only screen and (max-width: 886px) {
+              .Shareblg{
+                transform: scale(0.8,0.8);
+              }
+
+       }
   #bg {
     width: 99.4vw;
     height: 100vh;
@@ -156,13 +162,15 @@
 
 {% block body %}
 {% load static %}
-<img id="bg" src="{% static "imgs/bhh.jpg" %}" alt="home" />
+<!-- <img id="bg" src="{% static "imgs/bhh.jpg" %}" alt="home" /> -->
 
-<a href="/blog/addblog">
-  <button type="button" id="share" class="btn-hover butto color-1 Shareblg">Share Your Experience <span>&#9998</span>
-  </button>
+  <button type="button" id="share" class="btn-hover butto color-1 Shareblg">
+<a style="text-decoration: none;  color: rgb(255, 255, 255);" href="/blog/addblog">
+  Share Your Experience <span>&#9998</span>
 
 </a>
+  </button>
+
 
 
 
