--- a/templates/home/livechat.html
+++ b/templates/home/livechat.html
@@ -125,8 +125,9 @@
         text-align: left;
         padding: 0 0 0 0;
         vertical-align: top;
-        float: right;
-        overflow: hidden;
+        /* float: right; */
+        /* overflow: hidden; */
+        overflow-y: scroll;
         margin: -10px 8px
         
     }
@@ -163,7 +164,7 @@
         height: 100%;
         bottom: 0;
         z-index: 1;
-        background-color: rgb(45, 45, 46);
+        background-color: rgb(1, 17, 110);
 
     }
 
@@ -172,10 +173,11 @@
     }
 
     .writemsg textarea {
-        margin: 5px 10px 5px 5px;
+        margin: 5px 0px 5px 5px;
         max-width: 500px;
+        max-height: 33px;
         border-radius: 4px;
-        padding: 8px;
+        padding: 4px 7px;
         font-size: 15px;
     }
 
@@ -193,13 +195,17 @@
 
     .newsendlogo img {
         float: right;
-        width: 36px;
-        height: 49px;
-        margin: -3px 4px 2px 2px;
+        width: 38px;
+    height: 45px;
+    padding: 0px;
+    margin: 0px 9px 1px 1px;
 
         position: relative;
         cursor: pointer;
         background: transparent;
+    }
+    .newsendlogo button{
+        display: contents;
     }
 
     .name {
@@ -214,17 +220,21 @@
         color: rgb(0, 0, 68);
         float: left;
     }
+    form div{
+        display: flex;
+
+    }
 </style>
 
 {% endblock css %}
 {% block body %}
 {% load static %}
-<div class="total-monal">
+<div class="total-monal-chat">
     <div class="container-monal">
         <div class="heading ">
             <div class="chatlogo">
-
-                <img src="{% static " imgs/chatlogo2.png" %}" alt="home" />
+                <img src="{% static "imgs/chatlogo2.png" %}" alt="home" />
+               
             </div>
             <div class="livechat">
                 Live Chat
