reset psw design

--- a/templates/home/password_reset.html
+++ b/templates/home/password_reset.html
@@ -75,7 +75,7 @@
  /* input[type="submit"]{
   width: calc(80% - 47px);
  } */
-
+ }
 </style>{% endblock css %}
 
 {% block body %}
@@ -92,7 +92,7 @@
 
 	{% csrf_token %}
 	{{form}}
-	<input type="Submit" class="btn btn-info submitstyle" name="Send email">
+	<input type="Submit" class="btn btn-info " name="Send email">
 	
 </form>
 </div></div>
