--- a/templates/home/password_reset_done.html
+++ b/templates/home/password_reset_done.html
@@ -3,20 +3,34 @@
 {% block title %}Donors{% endblock title %}
 {% block css %}
 <style>
-  #outer {
+ #outer {
     position: relative;
-    top: 20vh;
+    top: 11vh;
+    margin-bottom: 50vh;
   }
 
   #inner {
-    width: 40%;
+    max-width: 500px;
     margin: auto;
-
-
-
-    background-image: linear-gradient(rgb(255, 183, 183), rgb(139, 249, 255));
+    box-shadow:rgb(0 0 0 / 51%) 0px 2px 15px -4px;
+    background: #fff;
 
   }
+  .box span{
+    text-align: center;
+    
+    border-bottom: 2px solid #5fbae9 ;
+   
+  }
+  .box h3{
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+    color:rgb(1, 17, 110) ;
+    
+  }
+
+
 
   .box {
     padding: 20px;
@@ -33,7 +47,7 @@
 <div class="box">
 
 
-<h3>Password reset complete</h3>
+<h3><span> PASSWORD RESET</span></h3>
 
 <p>Your password has been set. You may go ahead and log in now.</p>
 
