--- a/templates/home/password_reset_sent.html
+++ b/templates/home/password_reset_sent.html
@@ -1,15 +1,63 @@
 {% extends 'base.html' %}
 
-{% block title %}Donors{% endblock title %}
+{% block title %}Password Reset{% endblock title %}
+{%block css %}
+<style>
+/* .container{
+    position: relative;
+    top: 50vh;
+} */
+.outer-mail{
+    position: relative;
+    top: 11vh;
+    margin-bottom: 50vh;
+}
+.inner-mail {
+    max-width: 500px;
+    /* padding: 10px; */
+    box-shadow:rgb(0 0 0 / 51%) 0px 2px 15px -4px;
+    background: #fff;
+    max-width: 85vw;
+    margin: auto;
+}
+.box-mail span{
+    text-align: center;
+    border-bottom: solid 2px #5fbae9;
+}
+.box-mail h2{
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+    color:rgb(1, 17, 110) ;
+}
+.box-mail p{
+    text-align: center
+}
+.box-mail {
+    padding: 20px;
 
+    top: 20%;
+
+  }
+
+</style>
+
+{% endblock css %}
 {% block body %}
-<div class="container">
+<div class="outer-mail">
+<div class="container-mail">
+    <div class="inner-mail">
+        <div class="box-mail">
 
-<h2>Password reset sent</h2>
+<h2><span> RESET YOUR PASSWORD</span></h2>
 
 
 <p>We’ve emailed you instructions for setting your <b>password</b> , if an account exists with the email you entered. You should receive them shortly.</p>
 
 <p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</p>
 </div>
+</div>
+</div>
+</div>
+
  {% endblock %}
