--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
     }
 
 
-    @media only screen and (max-width: 600px) {
+    /* @media only screen and (max-width: 600px) {
       #inner {
         width: 100%;
         margin: auto;
@@ -56,7 +56,7 @@
 
         background-image: linear-gradient(rgb(255, 255, 134), rgb(4, 4, 83));
       }
-    }
+    } */
 
     @media only screen and (min-width: 992px) {
       #x {
