--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
       width: 9vw;
     } */
 
-
+    @import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@600&family=Playfair+Display:wght@700&family=Raleway:wght@300&family=STIX+Two+Text:wght@500&display=swap');
 
 
 
@@ -652,7 +652,7 @@ body{
         <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
      </header>
      
-<!-- <div class="frame">
+ {% comment %} <div class="frame">
        <button class="custom-btn btn-1">Read More</button>
        <button class="custom-btn btn-2">Read More</button>
        <button class="custom-btn btn-3"><span>Read More</span></button>
@@ -670,7 +670,7 @@ body{
        <button class="custom-btn btn-15">Read More</button>
        <button class="custom-btn btn-16">Read More</button>
       
-     </div>   -->
+     </div>   {% endcomment %}
      
       <!-- ************************************ -->
     </div>
@@ -690,6 +690,7 @@ body{
 
 
   </div>
+
   {% if messages %}
 
   {% for message in messages %}
