--- a/templates/home/Donors.html
+++ b/templates/home/Donors.html
@@ -7,7 +7,13 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0%;
+
   }
+  *{
+  font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif;
+font-family: 'STIX Two Text', serif;
+}
 body{
      overflow-x: hidden;
      background-image:   radial-gradient(#f5f7fa , #c3cfe2);
@@ -278,7 +284,9 @@ input[type=text]:placeholder {
   .card {
     margin: 11px;
     padding: 13px;
-    width: 435px;
+    width: 280px;
+    /* max-width: 450px; */
+    /* min-width:290px ; */
     min-height: 200px;
     display: grid;
     grid-template-rows: 20px 50px 1fr 50px;
@@ -288,6 +296,12 @@ input[type=text]:placeholder {
     max-width: 339px;
     font-size: 18px;
   }
+  @media only screen and (max-width : 340 ) {
+    .card{
+  /* width: 270px; */
+    }
+    
+  }
   
   .card:hover {
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
@@ -295,7 +309,7 @@ input[type=text]:placeholder {
   }
   
   .card__link,
-  .card__exit,
+  .card__exit
   .card__icon {
     position: relative;
     text-decoration: none;
@@ -509,35 +523,35 @@ input[type=text]:placeholder {
         overflow-y: auto;
         width: 92px;
         font-size: 13px;
-        /* text-overflow: ellipsis; */
-    }
-    .fl-table thead th {
+        text-overflow: ellipsis;
+      }
+      .fl-table thead th {
         text-align: left;
         border-bottom: 1px solid #f7f7f9;
-    }
-    .fl-table tbody tr {
+      }
+      .fl-table tbody tr {
         display: table-cell;
-    }
-    .fl-table tbody tr:nth-child(odd) {
+      }
+      .fl-table tbody tr:nth-child(odd) {
         background: none;
-    }
-    .fl-table tr:nth-child(even) {
+      }
+      .fl-table tr:nth-child(even) {
         background: transparent;
-    }
-    .fl-table tr td:nth-child(odd) {
+      }
+      .fl-table tr td:nth-child(odd) {
         background: #F8F8F8;
         border-right: 1px solid #E6E4E4;
-    }
-    .fl-table tr td:nth-child(even) {
+      }
+      .fl-table tr td:nth-child(even) {
         border-right: 1px solid #E6E4E4;
-    }
-    .fl-table tbody td {
+      }
+      .fl-table tbody td {
         display: block;
         text-align: center;
+      }
     }
-}
-
-.total-monal{
+        
+        .total-monal{
 
 top: 30vh;
 }
@@ -602,8 +616,9 @@ body {
 .card {
   margin: 20px;
   padding: 20px;
-  width: 500px;
+  /* width: 500px; */
   min-height: 200px;
+
   display: grid;
   grid-template-rows: 20px 50px 1fr 50px;
   border-radius: 10pxpx;
@@ -612,9 +627,19 @@ body {
   text-align: center;
 }
 
+@media (max-width: 600px) {
+
+.card{
+transform: scale(0.8,0.8);
+}
+
+}
 .card:hover {
   box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
   transform: scale(1.01);
+}
+.main-container {
+    padding: 0;
 }
 
 .card__link,
@@ -704,7 +729,7 @@ body {
 
 
 /* Caption text */
-.text {
+/* .text {
   color: #f2f2f2;
   font-size: 15px;
   padding: 8px 12px;
@@ -712,7 +737,7 @@ body {
   bottom: 8px;
   width: 100%;
   text-align: center;
-}
+} */
 
 /* Number text (1/3 etc) */
 .numbertext {
@@ -741,18 +766,18 @@ body {
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 6s;
+  -webkit-animation-duration: 5s;
   animation-name: fade;
-  animation-duration: 6s;
+  animation-duration: 5s;
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4} 
+  from {opacity: 0} 
   to {opacity: 1}
 }
 
 @keyframes fade {
-  from {opacity: 0.4} 
+  from {opacity: 0.5} 
   to {opacity: 1}
 }
 
@@ -765,6 +790,7 @@ body {
   display: inline-block;
   /* transform: scale(0.8,0.8); */
 }
+
 
 </style>
 
@@ -893,16 +919,16 @@ body {
                   <div class="cards">
 {% for h in Hospitals %}
                     <div class="card card-1">
-                      <div class="card__icon"><i class="fas fa-bolt"></i></div>
-                      <p class="card__exit"><i class="fas fa-times"></i></p>
+                      <div class="card__icon"><i class="fas fa-bol"></i></div>
+                      <p class="card__exit"><i class="fas fa-time"></i></p>
                       <h4> Hospital Name:  {{h.n}}</h4>
                       <p>Address:  {{h.Add}}</p>
                       
                       <p>Contact no.: {{h.P}}</p>
                       <p>Email:  {{h.em}}</p>
                       <p class="card__apply">
-                        <a class="card__link"href="/setappointment/{{h.un}}" >Make Appointment <i class="fas fa-arrow-right"></i></a>
                       </p>
+                      <a class="card__link"href="/setappointment/{{h.un}}" >Make Appointment <i class="fas fa-arrow-right"></i></a>
                     </div>
 {% endfor %}
                   </div>
@@ -1004,7 +1030,7 @@ body {
 
   
     <div class="mySlides fade">
-      <div class="numbertext tt" >1 / 3</div>
+      <div class="numbertext tt" ></div>
       
     
   
@@ -1020,11 +1046,11 @@ body {
   
   
       {% if forloop.counter|divisibleby:3 %}
-       <div class="text">Caption Text</div>
+       <div class="text"></div>
   </div>
   
   <div class="mySlides fade">
-    <div class="numbertext fl" >1 / 3</div>
+    <div class="numbertext fl" ></div>
       
       {% endif %}
       
@@ -1032,7 +1058,7 @@ body {
      
   {% endfor %}
   
-    <div class="text">Caption Text</div>
+    <div class="text"></div>
   </div>
   
   
@@ -1101,7 +1127,7 @@ function showSlides() {
   }
   slides[slideIndex-1].style.display = "block";  
   dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 7000); // Change image every 2 seconds
+  setTimeout(showSlides, 5000); // Change image every 2 seconds
 }
 </script>
 
